--- a/digital-ticket/index.html
+++ b/digital-ticket/index.html
@@ -69,7 +69,7 @@
 	</style>
 	</head>
 	<body style="margin: 0px" align="center">
-		<div style="width: 100vw; height: 100vh; background: transparent; display: table-cell; vertical-align: middle;" class="ripple" ripple-opacity="1" ripple-color="radial-gradient(ellipse at center, rgba(239,64,54,1) 0%, rgba(239,148,121,1) 12%, rgba(241,214,198,0.8) 23%, rgba(255,255,255,1) 54%)" ripple-press-expand-time="2" align="center">
+		<div style="width: 100vw; height: 100vh; background: transparent;" class="ripple" ripple-opacity="1" ripple-color="radial-gradient(ellipse at center, rgba(239,64,54,1) 0%, rgba(239,148,121,1) 12%, rgba(241,214,198,0.8) 23%, rgba(255,255,255,1) 54%)" ripple-press-expand-time="2" align="center">
 		<!--<div style="width: 100vw; height: 100vh; background: transparent" class="ripple" ripple-opacity="1" ripple-color="radial-gradient(ellipse at center, rgba(239,64,54,1) 0%, rgba(241,214,198,0.3) 50%, rgba(241,214,198,0) 24%)" align="center">-->
 			<div class="text">
 				1.6
