--- a/digital-ticket/index.html
+++ b/digital-ticket/index.html
@@ -16,6 +16,11 @@
 		}
 	</script>
 	<style>
+		body,
+		html {
+			position: fixed;
+		}
+
 		body {
 			font-family: 'Lucida Sans Unicode', 'Lucida Grande', sans-serif;
 			overflow-x: hidden;
