--- a/digital-ticket/index.html
+++ b/digital-ticket/index.html
@@ -70,7 +70,7 @@
 	</style>
 	</head>
 	<body style="margin: 0px" align="center">
-		<!--<div style="width: 100vw; height: 100vh; background: transparent; display: table-cell; vertical-align: middle;" class="ripple" ripple-opacity="1" ripple-color="radial-gradient(ellipse at center, rgba(239,64,54,1) 0%, rgba(239,148,121,1) 12%, rgba(241,214,198,0.8) 23%, rgba(255,255,255,1) 54%)" ripple-press-expand-time="2" align="center">-->
+		<div style="width: 100vw; height: 100vh; background: transparent; display: table-cell; vertical-align: middle;" class="ripple" ripple-opacity="1" ripple-color="radial-gradient(ellipse at center, rgba(239,64,54,1) 0%, rgba(239,148,121,1) 12%, rgba(241,214,198,0.8) 23%, rgba(255,255,255,1) 54%)" ripple-press-expand-time="2" align="center">
 		<!--<div style="width: 100vw; height: 100vh; background: transparent; display: table-cell; vertical-align: middle;" class="ripple" ripple-opacity="1" ripple-color="radial-gradient(ellipse at center, rgba(239,64,54,1) 0%, rgba(239,148,121,1) 12%, rgba(241,214,198,0.8) 23%, rgba(255,255,255,1) 54%)" ripple-press-expand-time="2" align="center">-->
 		<!--<div style="width: 100vw; height: 100vh; background: transparent" class="ripple" ripple-opacity="1" ripple-color="radial-gradient(ellipse at center, rgba(239,64,54,1) 0%, rgba(241,214,198,0.3) 50%, rgba(241,214,198,0) 24%)" align="center">-->
 			<div class="text">
@@ -84,7 +84,7 @@
 			<div class="author text">
 				JESSE J. MARTH
 			</div>
-		<!--</div>-->
+		</div>
 
 		<!--<div style="width: 90vw; height: 90vh; background: DarkSeaGreen" class="ripple margin" align="center">-->
 			<!--<h1 class="noSelect" style="color: white; font-size: 200%">Hold down to slowly expand the ripple</h1>-->
