--- a/digital-ticket/index.html
+++ b/digital-ticket/index.html
@@ -39,7 +39,7 @@
 		.text {
 			z-index: 100;
 			position: relative;
-			color: black;
+			color: white;
 			background: transparent;
 			font-size: 500%;
 			webkit-touch-callout: none;
