--- a/digital-ticket/index.html
+++ b/digital-ticket/index.html
@@ -14,6 +14,10 @@
 				ripple.registerRipples();
 			}, 1000)
 		}
+
+		document.ontouchmove = function(event){
+			event.preventDefault();
+		}
 	</script>
 	<style>
 		body,
