--- a/digital-ticket/index.html
+++ b/digital-ticket/index.html
@@ -43,7 +43,7 @@
 		.text {
 			z-index: 100;
 			position: relative;
-			color: white;
+			color: whitefix;
 			background: transparent;
 			font-size: 500%;
 			webkit-touch-callout: none;
@@ -59,34 +59,63 @@
 			font-size: 40px;
 		}
 
-		.gradient {
-			background: rgba(239,64,54,1);
-			background: -moz-radial-gradient(center, ellipse cover, rgba(239,64,54,1) 0%, rgba(239,148,121,1) 12%, rgba(241,214,198,1) 33%, rgba(241,241,242,1) 93%, rgba(241,241,242,1) 100%);
-			background: -webkit-gradient(radial, center center, 0px, center center, 100%, color-stop(0%, rgba(239,64,54,1)), color-stop(12%, rgba(239,148,121,1)), color-stop(33%, rgba(241,214,198,1)), color-stop(93%, rgba(241,241,242,1)), color-stop(100%, rgb(241, 241, 242)));
-			background: -webkit-radial-gradient(center, ellipse cover, rgba(239,64,54,1) 0%, rgba(239,148,121,1) 12%, rgba(241,214,198,1) 33%, rgba(241,241,242,1) 93%, rgba(241,241,242,1) 100%);
-			background: -o-radial-gradient(center, ellipse cover, rgba(239,64,54,1) 0%, rgba(239,148,121,1) 12%, rgba(241,214,198,1) 33%, rgba(241,241,242,1) 93%, rgba(241,241,242,1) 100%);
-			background: -ms-radial-gradient(center, ellipse cover, rgba(239,64,54,1) 0%, rgba(239,148,121,1) 12%, rgba(241,214,198,1) 33%, rgba(241,241,242,1) 93%, rgba(241,241,242,1) 100%);
-			background: radial-gradient(ellipse at center, rgba(239,64,54,1) 0%, rgba(239,148,121,1) 12%, rgba(241,214,198,1) 33%, rgba(241,241,242,1) 93%, rgba(241,241,242,1) 100%);
-			filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ef4036', endColorstr='#f1f1f2', GradientType=1 );
+		.footer {
+			color: grey;
+			display: flex;
+			justify-content: space-between;
+			margin: 0px 20px 10px 20px;
+			background: transparent;
 
-
+			/*align-self: flex-end;*/
+			/*color: grey;*/
+			/*display: flex;*/
+			/*justify-content: space-between;*/
+			/*margin: 0 100px;*/
+			/*background: transparent;*/
 		}
+
+		.ripple-content{
+			flex-grow: 1;
+			display: flex;
+			flex-direction: column;
+			align-items: center;
+			justify-content: center;
+		}
+		/*.gradient {*/
+			/*background: rgba(239,64,54,1);*/
+			/*background: -moz-radial-gradient(center, ellipse cover, rgba(239,64,54,1) 0%, rgba(239,148,121,1) 12%, rgba(241,214,198,1) 33%, rgba(241,241,242,1) 93%, rgba(241,241,242,1) 100%);*/
+			/*background: -webkit-gradient(radial, center center, 0px, center center, 100%, color-stop(0%, rgba(239,64,54,1)), color-stop(12%, rgba(239,148,121,1)), color-stop(33%, rgba(241,214,198,1)), color-stop(93%, rgba(241,241,242,1)), color-stop(100%, rgb(241, 241, 242)));*/
+			/*background: -webkit-radial-gradient(center, ellipse cover, rgba(239,64,54,1) 0%, rgba(239,148,121,1) 12%, rgba(241,214,198,1) 33%, rgba(241,241,242,1) 93%, rgba(241,241,242,1) 100%);*/
+			/*background: -o-radial-gradient(center, ellipse cover, rgba(239,64,54,1) 0%, rgba(239,148,121,1) 12%, rgba(241,214,198,1) 33%, rgba(241,241,242,1) 93%, rgba(241,241,242,1) 100%);*/
+			/*background: -ms-radial-gradient(center, ellipse cover, rgba(239,64,54,1) 0%, rgba(239,148,121,1) 12%, rgba(241,214,198,1) 33%, rgba(241,241,242,1) 93%, rgba(241,241,242,1) 100%);*/
+			/*background: radial-gradient(ellipse at center, rgba(239,64,54,1) 0%, rgba(239,148,121,1) 12%, rgba(241,214,198,1) 33%, rgba(241,241,242,1) 93%, rgba(241,241,242,1) 100%);*/
+			/*filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ef4036', endColorstr='#f1f1f2', GradientType=1 );*/
+		/*}*/
+		/**/
+
 	</style>
 	</head>
 	<body style="margin: 0px" align="center">
-		<div style="width: 100vw; height: 100vh; background: transparent; display: table-cell; vertical-align: middle;" class="ripple" ripple-opacity="1" ripple-color="radial-gradient(ellipse at center, rgba(239,64,54,1) 0%, rgba(239,148,121,1) 12%, rgba(241,214,198,0.8) 23%, rgba(255,255,255,1) 54%)" ripple-press-expand-time="2" align="center">
-		<!--<div style="width: 100vw; height: 100vh; background: transparent; display: table-cell; vertical-align: middle;" class="ripple" ripple-opacity="1" ripple-color="radial-gradient(ellipse at center, rgba(239,64,54,1) 0%, rgba(239,148,121,1) 12%, rgba(241,214,198,0.8) 23%, rgba(255,255,255,1) 54%)" ripple-press-expand-time="2" align="center">-->
-		<!--<div style="width: 100vw; height: 100vh; background: transparent" class="ripple" ripple-opacity="1" ripple-color="radial-gradient(ellipse at center, rgba(239,64,54,1) 0%, rgba(241,214,198,0.3) 50%, rgba(241,214,198,0) 24%)" align="center">-->
-			<div class="text">
-				1.6
+		<div style="width: 100vw; height: 100vh;   display: flex; flex-direction: column; background: transparent;" class="ripple" ripple-opacity="1" ripple-color="radial-gradient(ellipse at center, rgba(239,64,54,1) 0%, rgba(239,148,121,1) 12%, rgba(241,214,198,0.8) 23%, rgba(255,255,255,0) 54%)" ripple-press-expand-time="2" align="center">
+		<!--<div style="width: 100vw; height: 100vh;   display: flex; flex-direction: column; background: transparent; display: table-cell; vertical-align: middle;" class="ripple" ripple-opacity="1" ripple-color="radial-gradient(ellipse at center, rgba(239,64,54,1) 0%, rgba(239,148,121,1) 12%, rgba(241,214,198,0.8) 23%, rgba(255,255,255,0) 54%)" ripple-press-expand-time="2" align="center">-->
+			<div class="ripple-content">
+				<div class="text">
+					1.6
+				</div>
+
+				<div class="text">
+					OBJECTS OF DESIRE
+				</div>
+
+				<div class="author text">
+					JESSE J. MARTH
+				</div>
 			</div>
 
-			<div class="text">
-				OBJECTS OF DESIRE
-			</div>
-
-			<div class="author text">
-				JESSE J. MARTH
+			<div class="footer">
+				<div>TICKET NUMBER</div>
+				<div>31234674231</div>
+				<div><img src="">QR CODE IMG</div>
 			</div>
 		</div>
 
