--- a/digital-ticket/index.html
+++ b/digital-ticket/index.html
@@ -65,17 +65,10 @@
 			justify-content: space-between;
 			margin: 0px 20px 10px 20px;
 			background: transparent;
-
-			/*align-self: flex-end;*/
-			/*color: grey;*/
-			/*display: flex;*/
-			/*justify-content: space-between;*/
-			/*margin: 0 100px;*/
-			/*background: transparent;*/
 		}
 
 		.ripple-content{
-			flex-grow: 1;
+			/*flex-grow: 1;*/
 			display: flex;
 			flex-direction: column;
 			align-items: center;
