--- a/digital-ticket/index.html
+++ b/digital-ticket/index.html
@@ -16,7 +16,7 @@
 		}
 
 		document.ontouchmove = function(event){
-			event.preventDefault();
+//			event.preventDefault();
 		}
 	</script>
 	<style>
@@ -68,7 +68,7 @@
 		}
 
 		.ripple-content{
-			/*flex-grow: 1;*/
+			flex-grow: 1;
 			display: flex;
 			flex-direction: column;
 			align-items: center;
