--- a/digital-ticket/index.html
+++ b/digital-ticket/index.html
@@ -69,6 +69,11 @@
 			background: transparent;
 		}
 
+		.footer div {
+			color: grey;
+		}
+
+
 		.ripple-content{
 			flex-grow: 1;
 			display: flex;
