--- a/digital-ticket/index.html
+++ b/digital-ticket/index.html
@@ -114,7 +114,7 @@
 
 			<div class="footer">
 				<div>TICKET NUMBER</div>
-				<div>31234674231</div>
+				<div style="color: grey; text-decoration: none;">31234674231</div>
 				<div><img src="">QR CODE IMG</div>
 			</div>
 		</div>
