--- a/digital-ticket/index.html
+++ b/digital-ticket/index.html
@@ -3,7 +3,9 @@
 	<head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width = device-width, height = device-height, initial-scale = 1.0, user-scalable = yes">
-	<title>ripple-js demo</title>
+	<meta name="format-detection" content="telephone=no">
+
+		<title>ripple-js demo</title>
 	<script type="text/javascript" src="./ripple.js"></script>
 	<script type="text/javascript">
 		window.onload = function() {
