touch to discover my ass

--- a/digital-ticket/index.html
+++ b/digital-ticket/index.html
@@ -138,7 +138,7 @@
 				</div>
 			</div>
 
-			<div class="footer">
+			<div class="footer noSelect">
 				<div>TICKET NUMBER</div>
 				<div style="color: grey; text-decoration: none;">31234674231</div>
 				<div><img src="">QR CODE IMG</div>
