--- a/digital-ticket/index.html
+++ b/digital-ticket/index.html
@@ -66,6 +66,7 @@
 		.footer {
 			color: grey;
 			display: flex;
+			z-index: 100;
 			justify-content: space-between;
 			margin: 0px 20px 10px 20px;
 			background: transparent;
