--- a/digital-ticket/index.html
+++ b/digital-ticket/index.html
@@ -47,7 +47,7 @@
 		.text {
 			z-index: 100;
 			position: relative;
-			color: white;
+			color: #FDFDFD;
 			background: transparent;
 			font-size: 500%;
 			webkit-touch-callout: none;
