Adding fonts and timer

--- a/digital-ticket/index.html
+++ b/digital-ticket/index.html
@@ -5,7 +5,7 @@
 	<meta name="viewport" content="width = device-width, height = device-height, initial-scale = 1.0, user-scalable = yes">
 	<meta name="format-detection" content="telephone=no">
 
-		<title>ripple-js demo</title>
+		<title>OH!</title>
 	<script type="text/javascript" src="./ripple.js"></script>
 	<script type="text/javascript">
 		window.onload = function() {
@@ -44,7 +44,14 @@
 		    user-select: none;
 		}
 
+		@font-face {
+			font-family: Futura;
+			src: url(FuturaT_Bold.ttf);
+		}
+
 		.text {
+			font-family: Futura;
+			font-weight: bold;
 			z-index: 100;
 			position: relative;
 			color: #FDFDFD;
