Adding fonts and timer

--- a/digital-ticket/index.html
+++ b/digital-ticket/index.html
@@ -30,7 +30,7 @@
 		}
 
 		body {
-			font-family: 'Lucida Sans Unicode', 'Lucida Grande', sans-serif;
+			/*font-family: 'Lucida Sans Unicode', 'Lucida Grande', sans-serif;*/
 			overflow-x: hidden;
 			background: white;
 		}
