--- a/digital-ticket/index.html
+++ b/digital-ticket/index.html
@@ -30,7 +30,7 @@
 		}
 
 		body {
-			/*font-family: 'Lucida Sans Unicode', 'Lucida Grande', sans-serif;*/
+			font-family: 'Lucida Sans Unicode', 'Lucida Grande', sans-serif;
 			overflow-x: hidden;
 			background: white;
 		}
@@ -51,7 +51,7 @@
 
 		.text {
 			font-family: Futura;
-			font-weight: bold;
+			/*font-weight: bold;*/
 			z-index: 100;
 			position: relative;
 			color: #FDFDFD;
