--- a/digital-ticket/index.html
+++ b/digital-ticket/index.html
@@ -49,6 +49,11 @@
 			src: url(FuturaT_Bold.ttf);
 		}
 
+		@font-face {
+			font-family: Arbel;
+			src: url(ArbelHagildaBold.otf);
+		}
+
 		.hidden-text {
 			font-family: Futura;
 			/*font-weight: bold;*/
@@ -72,6 +77,7 @@
 		}
 
 		.footer {
+			font-family: Arbel;
 			color: #CE4942;
 			display: flex;
 			z-index: 100;
@@ -113,6 +119,8 @@
 		.touch {
 			color: #CE4942;
 			position: absolute;
+			font-family: Arbel;
+			font-weight: boldChanging ;
 			margin-left: auto;
 			margin-right: auto;
 			left: 0;
