--- a/digital-ticket/index.html
+++ b/digital-ticket/index.html
@@ -108,6 +108,7 @@
 		}
 
 		.hidden-text {
+			opacity: 0;
 			position: absolute;
 			margin-left: auto;
 			margin-right: auto;
@@ -120,7 +121,7 @@
 			color: #CE4942;
 			position: absolute;
 			font-family: Arbel;
-			font-weight: boldChanging ;
+			font-weight: bold;
 			margin-left: auto;
 			margin-right: auto;
 			left: 0;
