--- a/digital-ticket/index.html
+++ b/digital-ticket/index.html
@@ -108,10 +108,11 @@
 		}
 
 		.hidden-text {
-			opacity: 1;
+			opacity: 0;
 			position: absolute;
 			margin-left: auto;
 			margin-right: auto;
+			color: white;
 			left: 0;
 			right: 0;
 			top: 30%;
@@ -155,7 +156,7 @@
 
 			<div class="ripple-content content">
 				<div class="touch noSelect intro">
-				TOUCH TO DISCOVER
+				Touch To Discover
 				</div>
 
 				<div class="hidden-text">
