--- a/digital-ticket/index.html
+++ b/digital-ticket/index.html
@@ -147,10 +147,11 @@
 	</style>
 	</head>
 	<body style="margin: 0px" align="center">
+	<!--ripple-color="radial-gradient(ellipse at center, rgba(239,64,54,1) 0%, rgba(239,148,121,1) 12%, rgba(241,214,198,0.8) 23%, rgba(255,255,255,0) 54%)"-->
 
-		<div class="ripple ripple-holder"
+	<div class="ripple ripple-holder"
 			 ripple-opacity="1"
-			 ripple-color="radial-gradient(ellipse at center, rgba(239,64,54,1) 0%, rgba(239,148,121,1) 12%, rgba(241,214,198,0.8) 23%, rgba(255,255,255,0) 54%)"
+			 ripple-color="radial-gradient(ellipse at center, rgba(239,64,54,1) 0%, rgba(239,148,121,1) 12%, rgba(241,214,198,1) 23%, rgba(255,255,255,1) 54%)"
 			 ripple-press-expand-time="1"
 			 align="center">
 
