--- a/digital-ticket/index.html
+++ b/digital-ticket/index.html
@@ -112,7 +112,7 @@
 			position: absolute;
 			margin-left: auto;
 			margin-right: auto;
-			color: yellow;
+			color: white;
 			left: 0;
 			right: 0;
 			top: 30%;
