--- a/digital-ticket/index.html
+++ b/digital-ticket/index.html
@@ -57,7 +57,7 @@
 
 		.hidden-text {
 			font-family: Futura;
-			font-weight: bold;
+			font-weight: normal;
 			z-index: 100;
 			position: relative;
 			background: transparent;
@@ -75,8 +75,8 @@
 			position: absolute;
 			margin-left: auto;
 			margin-right: auto;
-			color: white;
-			/*color: green;*/
+			/*color: white;*/
+			color: green;
 			left: 0;
 			right: 0;
 			top: 30%;
