--- a/digital-ticket/index.html
+++ b/digital-ticket/index.html
@@ -75,8 +75,7 @@
 			position: absolute;
 			margin-left: auto;
 			margin-right: auto;
-			/*color: white;*/
-			color: green;
+			color: white;
 			left: 0;
 			right: 0;
 			top: 30%;
