--- a/digital-ticket/index.html
+++ b/digital-ticket/index.html
@@ -56,12 +56,9 @@
 		}
 
 		.hidden-text {
-			font-family: Futura;
-			font-weight: normal;
 			z-index: 100;
 			position: relative;
 			background: transparent;
-			font-size: 500%;
 
 			webkit-touch-callout: none;
 			-webkit-user-select: none;
@@ -81,6 +78,18 @@
 			top: 30%;
 		}
 
+		.hidden-text .title {
+			font-family: Futura;
+			font-weight: normal;
+			font-size: 500%;
+		}
+
+		.hidden-text .date {
+			font-family: Arbel;
+			font-weight: normal;
+			font-size: 300%;
+		}
+
 		.author {
 			font-size: 40px;
 		}
@@ -91,7 +100,7 @@
 			display: flex;
 			z-index: 100;
 			justify-content: space-between;
-			margin: 0px 20px 30px 35px;
+			margin: 0px 25px 35px 40px;
 			background: transparent;
 		}
 
@@ -145,11 +154,23 @@
 	</style>
 	</head>
 	<body style="margin: 0px" align="center">
-	<!--ripple-color="radial-gradient(ellipse at center, rgba(239,64,54,1) 0%, rgba(239,148,121,1) 12%, rgba(241,214,198,0.8) 23%, rgba(255,255,255,0) 54%)"-->
 
+	<!--original-->
+	<!--ripple-color="radial-gradient(ellipse at center, rgba(239,64,54,1) 0%, rgba(239,148,121,1) 12%, rgba(241,214,198,1) 23%, rgba(255,255,255,1) 54%)"-->
+
+
+	<!--ripple-color="radial-gradient(ellipse at center, rgba(214,52,51,1) 0%, rgba(224,133,122,1) 12%, rgba(235,199,191,1) 23%, rgba(255,255,255,1) 54%)"-->
+
+	<!--background: #d63433; /* Old browsers */-->
+	<!--background: -moz-radial-gradient(center, ellipse cover, #d63433 0%, #e0857a 14%, #ebc7bf 35%, #ffffff 88%); /* FF3.6-15 */-->
+	<!--background: -webkit-radial-gradient(center, ellipse cover, #d63433 0%,#e0857a 14%,#ebc7bf 35%,#ffffff 88%); /* Chrome10-25,Safari5.1-6 */-->
+	<!--background: radial-gradient(ellipse at center, #d63433 0%,#e0857a 14%,#ebc7bf 35%,#ffffff 88%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */-->
+	<!--filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#d63433', endColorstr='#ffffff',GradientType=1-->
+	<!---->
+	<!--radial-gradient(ellipse at center,  rgb(214,52,51) 0%,rgb(224,133,122) 14%,rgb(235,199,191) 35%,rgb(255,255,255) 88%);-->
 	<div class="ripple ripple-holder"
 			 ripple-opacity="1"
-			 ripple-color="radial-gradient(ellipse at center, rgba(239,64,54,1) 0%, rgba(239,148,121,1) 12%, rgba(241,214,198,1) 23%, rgba(255,255,255,1) 54%)"
+			 ripple-color="radial-gradient(ellipse at center, rgba(214,52,51,1) 0%, rgba(224,133,122,1) 12%, rgba(235,199,191,1) 23%, rgba(255,255,255,1) 54%)"
 			 ripple-press-expand-time="1"
 			 align="center">
 
@@ -160,13 +181,13 @@
 
 				<div class="hidden-text">
 					<!--<div class="text">-->
-					<div>
+					<div class="date">
 						1.6
 					</div>
 
 					<!--<div class="text">-->
 
-					<div>
+					<div class="title">
 						OBJECTS OF DESIRE
 					</div>
 
