--- a/digital-ticket/index.html
+++ b/digital-ticket/index.html
@@ -73,6 +73,7 @@
 			margin-left: auto;
 			margin-right: auto;
 			color: white;
+			/*color: green;*/
 			left: 0;
 			right: 0;
 			top: 30%;
@@ -81,7 +82,8 @@
 		.hidden-text .title {
 			font-family: Futura;
 			font-weight: normal;
-			font-size: 500%;
+			font-size: 85px;
+			margin-bottom: 115px;
 		}
 
 		.hidden-text .date {
@@ -100,12 +102,16 @@
 			display: flex;
 			z-index: 100;
 			justify-content: space-between;
-			margin: 0px 25px 35px 40px;
+			margin: 0px 30px 25px;
 			background: transparent;
 		}
 
 		.footer div {
 			color: #CE4942;
+		}
+
+		.footer-item {
+			min-width: 123px;
 		}
 
 
@@ -138,6 +144,29 @@
 			top: 50%;
 		}
 
+		.details {
+			display: flex;
+
+			justify-content: space-between;
+			margin: 0px 210px 0px 244px;
+
+			/*margin: 0px 262px 0px 264px;*/
+		}
+
+
+		.detail-header {
+			font-family: Arbel;
+			font-weight: bold;
+			font-size: 20px;
+			margin-bottom: 11px;
+		}
+
+		.detail-text {
+			font-family: Arbel;
+			font-weight: normal;
+			font-size: 20px;
+		}
+
 		/*.content{*/
 			/*flex-grow: 1;*/
 			/*display: flex;*/
@@ -145,6 +174,14 @@
 			/*align-items: center;*/
 			/*justify-content: center;*/
 		/*}*/
+
+		.detail-item {
+			min-width: 150px;
+			/*background-color: yellow;*/
+		}
+		.price {
+			text-align: right;
+		}
 
 		.ripple-content {
 			position: relative;
@@ -180,28 +217,50 @@
 				</div>
 
 				<div class="hidden-text">
-					<!--<div class="text">-->
-					<div class="date">
-						1.6
-					</div>
-
-					<!--<div class="text">-->
 
 					<div class="title">
 						OBJECTS OF DESIRE
 					</div>
 
-					<!--<div class="author text">-->
-					<div class="author">
-						JESSE J. MARTH
+					<div class="details">
+
+						<div class="detail-item">
+							<div class="detail-header">
+								תחילת הרצאה
+							</div>
+							<div class="detail-text">
+								22:00
+							</div>
+						</div>
+
+						<div class="detail-item">
+							<div class="detail-header">
+								פתיחת דלתות
+							</div>
+							<div class="detail-text">
+								20:30
+							</div>
+						</div>
+
+						<div class="detail-item">
+							<div class="detail-header">
+								תאריך
+							</div>
+							<div class="detail-text">
+								9.7
+							</div>
+						</div>
 					</div>
+
+
+
 				</div>
 			</div>
 
 			<div class="footer noSelect">
-				<div>REGULAR TICKET</div>
-				<div style="text-decoration: none;">31234674231</div>
-				<div>149.99₪</div>
+				<div class="footer-item">כרטיס רגיל</div>
+				<div class="footer-item" style="text-decoration: none;">31234674231</div>
+				<div class="footer-item price">149.99₪</div>
 			</div>
 		</div>
 	</body>
