--- a/digital-ticket/index.html
+++ b/digital-ticket/index.html
@@ -72,8 +72,8 @@
 			position: absolute;
 			margin-left: auto;
 			margin-right: auto;
-			color: white;
-			/*color: green;*/
+			/*color: white;*/
+			color: green;
 			left: 0;
 			right: 0;
 			top: 30%;
@@ -148,7 +148,7 @@
 			display: flex;
 
 			justify-content: space-between;
-			margin: 0px 210px 0px 244px;
+			margin: 0px 99px 0px 135px;
 
 			/*margin: 0px 262px 0px 264px;*/
 		}
