--- a/digital-ticket/index.html
+++ b/digital-ticket/index.html
@@ -72,8 +72,8 @@
 			position: absolute;
 			margin-left: auto;
 			margin-right: auto;
-			/*color: white;*/
-			color: green;
+			color: white;
+			/*color: green;*/
 			left: 0;
 			right: 0;
 			top: 30%;
