--- a/digital-ticket/index.html
+++ b/digital-ticket/index.html
@@ -102,8 +102,9 @@
 			display: flex;
 			z-index: 100;
 			justify-content: space-between;
-			margin: 0px 30px 25px;
+			/*margin: 0px 30px 25px;*/
 			background: transparent;
+			margin-bottom: 25px;
 		}
 
 		.footer div {
@@ -111,7 +112,7 @@
 		}
 
 		.footer-item {
-			min-width: 123px;
+			min-width: 200px;
 		}
 
 
@@ -260,7 +261,7 @@
 			<div class="footer noSelect">
 				<div class="footer-item">כרטיס רגיל</div>
 				<div class="footer-item" style="text-decoration: none;">31234674231</div>
-				<div class="footer-item price">149.99₪</div>
+				<div class="footer-item">149.99₪</div>
 			</div>
 		</div>
 	</body>
