--- a/digital-ticket/index.html
+++ b/digital-ticket/index.html
@@ -261,7 +261,7 @@
 			<div class="footer noSelect">
 				<div class="footer-item">כרטיס רגיל</div>
 				<div class="footer-item" style="text-decoration: none;">31234674231</div>
-				<div class="footer-item">149.99₪</div>
+				<div class="footer-item">₪149.99</div>
 			</div>
 		</div>
 	</body>
