--- a/digital-ticket/index.html
+++ b/digital-ticket/index.html
@@ -109,6 +109,7 @@
 
 		.footer div {
 			color: #CE4942;
+			font-size: 20px;
 		}
 
 		.footer-item {
@@ -135,6 +136,7 @@
 		.touch {
 			color: #CE4942;
 			position: absolute;
+			font-size: 20px;
 			font-family: Arbel;
 			font-weight: bold;
 			margin-left: auto;
